# bristol-climatehack-2023

./: LICENSE  README.md  dataset.py  del_bad.sh  downloader.py  prep.py  pyproject.toml  train.py  utils.py
model/: attention.py  blocks.py  conv.py  model.py  model_lightning.py  weight_init.py
