[tool.poetry]
name = "bristol-climatehack"
version = "0.1.0"
description = ""
authors = ["fractalcucumber, desperth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
astral = "^3.2"
h5py = "^3.11.0"
numba = "^0.60.0"
lightning = "^2.3.0"
wandb = "^0.17.2"
nvitop = "^1.3.2"
black = "^24.4.2"
matplotlib = "^3.9.0"
xarray = "^2024.6.0"
pip = "^24.1"
zarr = "^2.18.2"
dask = "^2024.6.2"
aiohttp = "^3.9.5"
ipywidgets = "^8.1.3"
pyarrow = "^16.1.0"
numcodecs = "^0.12.1"
pandas = "^2.2.2"
scipy = "^1.13.1"
huggingface-hub = "^0.23.4"
einops = "^0.8.0"
requests = "2.26"
ocf-blosc2 = "^0.0.4"
gcsfs = "^2024.6.0"
fsspec = "^2024.6.0"
cartopy = "^0.23.0"
doxa-cli = "^0.1.7"
ncps = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
